<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/messages_iv"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/messages"
                android:src="@drawable/ic_message" />

            <ImageView
                android:id="@+id/notification_iv"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/messages_iv"
                android:layout_toStartOf="@+id/messages_iv"
                android:contentDescription="@string/notifications"
                android:src="@drawable/ic_notifications" />

            <TextView
                android:id="@+id/toolbar_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/from_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"
            android:ems="2"
            android:text="@string/from_tv"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/to_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/from_et"
            android:layout_margin="16dp"
            android:ems="2"
            android:text="@string/to_tv"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/from_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/from_tv"
            android:layout_toRightOf="@+id/from_tv"
            android:background="@drawable/et_borders"
            android:ems="10"
            android:focusable="false"
            android:inputType="text"
            android:minHeight="24dp"
            android:padding="4dp" />

        <EditText
            android:id="@+id/to_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/from_et"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/to_tv"
            android:layout_toRightOf="@+id/to_tv"
            android:background="@drawable/et_borders"
            android:ems="10"
            android:focusable="false"
            android:inputType="text"
            android:minHeight="24dp"
            android:padding="4dp" />

        <ImageView
            android:id="@+id/switcher_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:layout_toEndOf="@+id/from_et"
            android:layout_toRightOf="@+id/from_et"
            android:contentDescription="@string/switch_locations"
            android:src="@drawable/ic_swap_vert" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/place_autocomplete_fragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/take_car_btn"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/bt1_borders"
                android:padding="16dp"
                android:text="@string/take_car_bt"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/req_pickup_btn"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bt2_borders"
                android:padding="8dp"
                android:text="@string/request_a_pickup_bt"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>